# self-pdf-bot

./: README.md  app.py  config.py  main.py  pyproject.toml
